frontend.yaml
apiVersion: apps/v1 
kind: Deployment
metadata:
  name: react-frontend
spec: 
  replicas: 1
  selector: 
    matchLabels:
      app: react-frontend 
  template: 
    metadata:
      labels:
        app: react-frontend
    spec:
      containers:
        - name: react-frontend
          image: 16dag16e/taggrs-react-pipeline:prod-0.1.2
      imagePullSecrets:
        - name: my-registry-secret
