dashboard.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: taggrs-dashboard
  namespace: default
  annotations:
    keel.sh/policy: all               # Update for minor and patch-level updates
    keel.sh/tag: semver               # Use semantic versioning
    keel.sh/pollSchedule: "@every 1h" # Poll every hour
spec:
  replicas: 2
  selector:
    matchLabels:
      app: taggrs-dashboard
  template:
    metadata:
      labels:
        app: taggrs-dashboard
    spec:
      containers:
        - name: taggrs-dashboard
          image: 16dag16e/taggrs-dashboard:acceptance-0.1.59 # Initial version
          imagePullPolicy: Always  # Ensure the image is pulled from the registry
      imagePullSecrets:
        - name: dockerhub-secret    # Docker Hub secret for private repository access
---
apiVersion: v1
kind: Service
metadata:
  name: taggrs-dashboard-service
  namespace: default
spec:
  type: LoadBalancer
  selector:
    app: taggrs-dashboard
  ports:
    - protocol: TCP
      port: 80        # The port on which the service will be accessible
      targetPort: 80  # The port on the container to forward traffic to
    - protocol: TCP
      port: 443        # The port on which the service will be accessible
      targetPort: 443  # The port on the container to forward traffic to
  type: ClusterIP      # Default service type
