loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-ingress-loadbalancer
  namespace: ingress-nginx
spec:
  type: LoadBalancer
  selector:
    app.kubernetes.io/name: ingress-nginx
  ports:
    - name: http
      port: 80
      targetPort: 80
    - name: https
      port: 443
      targetPort: 443
